# Steem-Wallet-Desktop

./: .gitignore  README.md  dev-server.js  eslint.config.js  index.html  package-lock.json  package.json  run-app.ps1  run-tauri.bat  start-dev-server.bat  verify.ps1  vite.config.ts
.github/workflows/: release.yml
.tauri/: steem-wallet.key.pub
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  lib.rs  main.rs  storage.rs
src/components/: ErrorBoundary.tsx
src/components/layout/: WalletHeader.tsx  WalletNavigation.tsx
src/components/ui/: checkbox.tsx  skeleton.tsx  sonner.tsx  toast.tsx  toaster.tsx
src/components/wallet/: AccountHistory.tsx  AccountOperations.tsx  AccountPowerMeters.tsx  AccountSecurityOperations.tsx  AppLoadingScreen.tsx  AppLockScreen.tsx  AppLockSetupDialog.tsx  AppSettingsOperations.tsx  ChangePasswordDialog.tsx  DelegationConfirmDialog.tsx  DelegationEditDialog.tsx  (+23 more)
src/config/: api.ts
src/contexts/: WalletDataContext.tsx
src/hooks/: use-mobile.tsx  useAccountHistory.ts  useAutoLock.ts  useAutoRewardClaiming.ts  useDelegations.ts  useMarketData.ts  useProposals.ts  useSecureKeys.ts  useSmartToastPosition.ts  useSteemAccount.ts  useWebSocket.ts  useWitnesses.ts
src/pages/: Index.tsx  NotFound.tsx
src/services/: accountManager.ts  appLockService.ts  dataCache.ts  encryptedKeyStorage.ts  priceApi.ts  secureStorage.ts  steemApi.ts  steemOperations.ts  steemWebSocket.ts
src/utils/: httpClient.ts  security.ts  utility.tsx
