[package]
name = "steem_wallet_desktop"
version = "0.1.3"
description = "Secure Steem Wallet Desktop Application"
authors = ["Steem Wallet Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "steem_wallet_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
hex = "0.4"
rand = "0.8"
pbkdf2 = "0.12"
sha2 = "0.10"
argon2 = "0.5"
reqwest = { version = "0.12", features = ["json"] }

[features]
default = []
